--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="icons">
                 <a href="https://media.kyoto-seika.ac.jp/latentmedia/?fbclid=PAZXh0bgNhZW0CMTEAAafwdcQaAChrIx7NEQ9lnFnzxCGcb8_NusD_Bpj5UWmlxsirCtfcrQ03TnR-XA_aem_RXoQV_-ZWdh7lcLV5rCICQ" class="icon"><img src="images/latentmedialab_logotype_white.png" width="60" height="50 alt=""></a>
-                   
+                <a href="https://x.com/latentmedialab?s=21&t=KFP-dy5x5v4PJ2KdZGwOXA&fbclid=PAZXh0bgNhZW0CMTEAAacbtHfdyhO5iFrzfuUQK8XwRmNa-5H00wbrWx0_FlTsHqCEIl38DHXeE8Nz4w_aem_fggVuVGYg-O9d_2ITL4eaw" class="icon"><img src="images/icons8-ツイッターx-500.png" width="60" height="60" alt=""></a>   
                 <a href="https://www.instagram.com/latent_media_lab/" class="icon"><img src="images/icons8-インスタグラム-500.png" width="60" height="60" alt=""></a>
                 </div>
         </header>
