--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="icons">
                 <a href="https://media.kyoto-seika.ac.jp/latentmedia/?fbclid=PAZXh0bgNhZW0CMTEAAafwdcQaAChrIx7NEQ9lnFnzxCGcb8_NusD_Bpj5UWmlxsirCtfcrQ03TnR-XA_aem_RXoQV_-ZWdh7lcLV5rCICQ" class="icon"><img src="images/latentmedialab_logotype_white.png" width="60" height="50 alt=""></a>
                 <a href="https://x.com/latentmedialab?s=21&t=KFP-dy5x5v4PJ2KdZGwOXA&fbclid=PAZXh0bgNhZW0CMTEAAacbtHfdyhO5iFrzfuUQK8XwRmNa-5H00wbrWx0_FlTsHqCEIl38DHXeE8Nz4w_aem_fggVuVGYg-O9d_2ITL4eaw" class="icon"><img src="images/icons8-ツイッターx-500.png" width="60" height="60" alt=""></a>   
-                <a href="https://www.instagram.com/latent_media_lab/" class="icon"><img src="images/icons8-インスタグラム-500.png" width="60" height="60" alt=""></a>
+                <a href="https://www.instagram.com/latent_media_lab" class="icon"><img src="images/icons8-インスタグラム-500.png" width="60" height="60" alt=""></a>
                 </div>
         </header>
 
@@ -39,7 +39,7 @@
                 <div class="details-left">
                     <div>
                         <h2>トークイベント</h2>
-                        <p>2025 9.21 (13:00~14:30)<br>重田佑介 / Scott Allen / 本田光</p>
+                        <p>2025 9.20 (13:00~14:00)<br>重田佑介 / Scott Allen / 本田光</p>
                     </div>
                     <div>
                         <h2>アクセス</h2>
