--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
                 <h1>unweaved・アンウィーブド</h1>
                 <p>2025 9.20-9.21 (12:00~17:00)</p>
             </div>
-            <div class="icons">
-                <a href="https://media.kyoto-seika.ac.jp/latentmedia/?fbclid=PAZXh0bgNhZW0CMTEAAafwdcQaAChrIx7NEQ9lnFnzxCGcb8_NusD_Bpj5UWmlxsirCtfcrQ03TnR-XA_aem_RXoQV_-ZWdh7lcLV5rCICQ" class="icon"><img src="images/latentmedialab_logotype_white.png" width="60" height="50 alt=""></a>
-                <a href="https://x.com/latentmedialab?s=21&t=KFP-dy5x5v4PJ2KdZGwOXA&fbclid=PAZXh0bgNhZW0CMTEAAacbtHfdyhO5iFrzfuUQK8XwRmNa-5H00wbrWx0_FlTsHqCEIl38DHXeE8Nz4w_aem_fggVuVGYg-O9d_2ITL4eaw" class="icon"><img src="images/icons8-ツイッターx-500.png" width="60" height="60" alt=""></a>   
-                <a href="https://www.instagram.com/latent_media_lab" class="icon"><img src="images/icons8-インスタグラム-500.png" width="60" height="60" alt=""></a>
+             <div class="header-social">
+                <div class="icons">
+                    <div class="logo"><a href="https://media.kyoto-seika.ac.jp/latentmedia/?fbclid=PAZXh0bgNhZW0CMTEAAafwdcQaAChrIx7NEQ9lnFnzxCGcb8_NusD_Bpj5UWmlxsirCtfcrQ03TnR-XA_aem_RXoQV_-ZWdh7lcLV5rCICQ"><img src="images/latentmedialab_logotype_white.png" width="60" height="50" alt=""></a></div>
+                <div class="icons">
+                    <a href="https://www.instagram.com/latent_media_lab/" class="icon">IG</a>
+                    <a href="https://x.com/latentmedialab?s=21&t=KFP-dy5x5v4PJ2KdZGwOXA&fbclid=PAZXh0bgNhZW0CMTEAAacbtHfdyhO5iFrzfuUQK8XwRmNa-5H00wbrWx0_FlTsHqCEIl38DHXeE8Nz4w_aem_fggVuVGYg-O9d_2ITL4eaw" class="icon">X</a>
                 </div>
+            </div>
         </header>
 
         <main>
             <section class="artists">
-                <p>ScottAllen     桑島直暖     本田光     安本華     駒井透也     佐々木輝     綱井晴     tkmt</p>
+                <p>Scott　Allen 桑島直暖     本田光     安本華     駒井透也     佐々木輝     綱井晴     tkmt</p>
             </section>
 
             <section class="description">
